yaml.bnf
<value> ::= <string> | <number> | <array> | <object>

<object> ::= <key-value list>
<key-value list> ::= <key-value element> | <key-value element> '\n' <key-value list>
<key-value list> ::= <key-value element> '\n' <key-value list>
<key-value element> ::= <current_indent> <key> ':\s' <scalar_item> '\n'|
    ::= <current_indent> <key> ':\n' <add_indent()> <object_or_array_item> <remove_indent()>
<key> ::=  <scalar_item>

<array> ::= <array_element> | <array_element> '\n' <array_element_list>
<array_element_list> ::= <array_element> '\n' <array_element_list>
<array_element> ::= <current_indent> '-\s' <scalar_item> '\n'|
    ::= <current_indent> '-\n' add_indent() <object_or_array_item> remove_indent()

<scalar_item> ::= <string> | <number>
<object_or_array_item> ::= <array> | <object>

<number> ::= int | float

<string> ::= "str"

<remove_indent()> ::= remove two spaces from current indent level

<add_indent()> ::= add two spaces to current indent level

<current_indent> ::= current amount of spaces at start of string
